/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package metaTask;
import "metapb.proto";
import "pd_pulse.proto";
option java_package = "org.apache.hugegraph.pd.grpc";

enum TaskType {
  Unknown = 0;
  Split_Partition = 1;
  Change_Shard = 2;
  Move_Partition = 3;
  Clean_Partition = 4;
  Change_KeyRange = 5;
}

// 一条任务信息
message Task {
  uint64 id = 1;
  TaskType type = 2;
  TaskState state = 3;
  int64 start_timestamp = 4;
  metapb.Partition partition = 5;
  string message = 6;
  //每个shard执行的任务状态
  repeated ShardTaskState shardState = 7;
  ChangeShard changeShard = 9;
  SplitPartition splitPartition = 10;
  MovePartition movePartition = 11;
  CleanPartition cleanPartition = 12;
  PartitionKeyRange partitionKeyRange = 13;
}

enum TaskState{
  Task_Unknown = 0;
  Task_Ready = 1;   //任务就绪
  Task_Doing = 2;   //执行中
  Task_Done = 3;    //完成
  Task_Exit = 4;    //退出
  Task_Stop = 10;
  Task_Success = 11;
  Task_Failure = 12;
}

message ShardTaskState{
  uint64 store_id = 1;
  TaskState state = 2;
}
